upd: event_partner
