# internal/api/controller/event_employee/get_all.controller.go
@@ -5,6 +5,15 @@ import (
 	"net/http"
 )
 
+// GetAll godoc
+// @Summary Get all event employee
+// @Description Retrieves a list of all event employee
+// @Tags Event Employees
+// @Accept json
+// @Produce json
+// @Success 200 {object} map[string]interface{} "Success"
+// @Failure 400 {object} map[string]interface{} "Bad Request"
+// @Router /api/v1/event-employees/get/all [get]
 func (e EventEmployeeController) GetAll(ctx *gin.Context) {
 	data, err := e.EventEmployeeUseCase.GetAll(ctx)
 	if err != nil {
