# internal/api/controller/event_partner/create_one.controller.go
@@ -1,1 +1,51 @@
 package event_partner_controller
+
+import (
+	"bookify/internal/domain"
+	"fmt"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+// CreateOne godoc
+// @Summary Create a new event partner
+// @Description Creates a new event type for the current user
+// @Tags Event Partners
+// @Accept json
+// @Produce json
+// @Param eventPartner body domain.EventPartnerInput true "Event Partner Body"
+// @Router /api/v1/event-partners/create [post]
+func (e *EventPartnerController) CreateOne(ctx *gin.Context) {
+	currentUser, exist := ctx.Get("currentUser")
+	if !exist {
+		ctx.JSON(http.StatusUnauthorized, gin.H{
+			"status":  "error",
+			"message": "You are not login!",
+		})
+		return
+	}
+
+	//  Lấy thông tin từ request
+	var eventPartnerInput domain.EventPartnerInput
+	if err := ctx.ShouldBindJSON(&eventPartnerInput); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": err.Error()},
+		)
+		return
+	}
+
+	err := e.EventPartnerUseCase.CreateOne(ctx, &eventPartnerInput, fmt.Sprintf("%s", currentUser))
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, gin.H{
+			"status":  "error",
+			"message": err.Error()},
+		)
+		return
+	}
+
+	// Trả về phản hồi thành công
+	ctx.JSON(http.StatusOK, gin.H{
+		"status": "success",
+	})
+}
