# internal/api/controller/event_partner/update_one.controller.go
@@ -1,1 +1,51 @@
 package event_partner_controller
+
+import (
+	"bookify/internal/domain"
+	"fmt"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+// UpdateOne godoc
+// @Summary Update an event partner
+// @Description Updates an existing event partner
+// @Tags Event Partners
+// @Accept json
+// @Produce json
+// @Param eventPartner body domain.EventPartnerInput true "Event Partner Body"
+// @Router /api/v1/event-partners/update [put]
+func (e *EventPartnerController) UpdateOne(ctx *gin.Context) {
+	currentUser, exist := ctx.Get("currentUser")
+	if !exist {
+		ctx.JSON(http.StatusUnauthorized, gin.H{
+			"status":  "error",
+			"message": "You are not login!",
+		})
+		return
+	}
+
+	//  Lấy thông tin từ request
+	var eventPartnerInput domain.EventPartnerInput
+	if err := ctx.ShouldBindJSON(&eventPartnerInput); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": err.Error()},
+		)
+		return
+	}
+	id := ctx.Query("id")
+
+	err := e.EventPartnerUseCase.UpdateOne(ctx, id, &eventPartnerInput, fmt.Sprintf("%s", currentUser))
+	if err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"status":  "error",
+			"message": err.Error(),
+		})
+		return
+	}
+
+	ctx.JSON(http.StatusOK, gin.H{
+		"status": "success",
+	})
+}
