# internal/api/routes/routes.go
@@ -7,6 +7,7 @@ import (
 	"bookify/internal/api/routes/event"
 	event_discount_route "bookify/internal/api/routes/event_discount"
 	event_employee_route "bookify/internal/api/routes/event_employee"
+	event_partner_route "bookify/internal/api/routes/event_partner"
 	event_ticket_route "bookify/internal/api/routes/event_ticket"
 	"bookify/internal/api/routes/event_type"
 	event_wishlist_route "bookify/internal/api/routes/event_wishlist"
@@ -76,6 +77,8 @@ func SetUp(env *config.Database, timeout time.Duration, client *mongo.Client, db
 	event_wishlist_route.EventWishlistRouter(env, timeout, db, privateRouterV1)
 	event_employee_route.AdminEventEmployeeRouter(env, timeout, db, privateRouterV1)
 	event_employee_route.EventEmployeeRouter(env, timeout, db, privateRouterV1)
+	event_partner_route.AdminEventPartnerRouter(env, timeout, db, privateRouterV1)
+	event_partner_route.EventPartnerRouter(env, timeout, db, privateRouterV1)
 
 	err := data_seeder.DataSeeds(context.Background(), client)
 	if err != nil {
